Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-27939

Windows 8 Build with MSVC 2012 fails

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 5.0.0 RC 1
    • 5.0.0
    • Multimedia
    • None
    • Windows 8, Build 9200
      Windows 8 SDK
      MSVC 2012 (Visual Studio Express)

    • qtmultimedia: 6826f684e29b078888c35149c520bf41012b0de4

      Following Command line:

      Git Master, Initialized with -http -no-webkit

      configure -developer-build -opensource -confirm-license -nomake tests -opengl es2 -angle -directwrite -mp -rtti

      Build failes with:

      c:\qt\git-qt5\qtbase\include\qtcore\../../src/corelib/global/qglobal.h(1052) : e
      rror C2825: 'T': must be a class or namespace when followed by '::'
      .\qdeclarativevideooutput.cpp(191) : see reference to function template
      instantiation 'T qt_dynamic_cast_check<QDeclarativeVideoRendererBackend*,QDeclar
      ativeVideoBackend*>(X,T *)' being compiled
      with
      [
      T=QDeclarativeVideoRendererBackend *,
      X=QDeclarativeVideoBackend *
      ]
      c:\qt\git-qt5\qtbase\include\qtcore\../../src/corelib/global/qglobal.h(1052) : e
      rror C2039: 'dynamic_cast_will_always_fail_because_rtti_is_disabled' : is not a
      member of '`global namespace''
      c:\qt\git-qt5\qtbase\include\qtcore\../../src/corelib/global/qglobal.h(1052) : e
      rror C2146: syntax error : missing ';' before identifier 'dynamic_cast_will_alwa
      ys_fail_because_rtti_is_disabled'
      c:\qt\git-qt5\qtbase\include\qtcore\../../src/corelib/global/qglobal.h(1052) : e
      rror C2275: 'T' : illegal use of this type as an expression
      .\qdeclarativevideooutput.cpp(191) : see declaration of 'T'
      c:\qt\git-qt5\qtbase\include\qtcore\../../src/corelib/global/qglobal.h(1052) : e
      rror C2065: 'dynamic_cast_will_always_fail_because_rtti_is_disabled' : undeclare
      d identifier
      NMAKE : fatal error U1077: '"C:\Program Files (x86)\Microsoft Visual Studio 11.0
      \VC\BIN\cl.EXE"' : return code '0x2'
      Stop.
      NMAKE : fatal error U1077: '"C:\Program Files (x86)\Microsoft Visual Studio 11.0
      \VC\BIN\nmake.exe"' : return code '0x2'
      Stop.

      It seems like the compiler is not able to correctly solve qt_dynamic_cast. Since I do have RTTI enabled the dynamic_cast_will_always_fail_because_rtti_is_disabled does not seem to be correct here.

        For Gerrit Dashboard: QTBUG-27939
        # Subject Branch Project Status CR V

            kleint Friedemann Kleint
            jerebo jeremias bosch
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes