Fix compilation with -no-rtti.

Availability of dynamic_cast should be checked.

Task-number: QTBUG-27939
Change-Id: I24c0bca7859a45c6be89c507dadd91e7175939e0
Reviewed-by: Thomas McGuire <thomas.mcguire@kdab.com>